# VI

./: .gitignore  README.md
images/pt_512x512/: progressive_output_0001.ppm  progressive_output_0256.ppm  progressive_output_0512.ppm  progressive_output_0768.ppm  progressive_output_1024.ppm  progressive_output_1280.ppm  progressive_output_1536.ppm  progressive_output_1792.ppm  progressive_output_2048.ppm  progressive_output_2304.ppm  progressive_output_2560.ppm  progressive_output_2816.ppm  progressive_output_3072.ppm
projeto/: Makefile  MyImage.ppm  cornell_box_VI_rendered.ppm  cornell_box_rendered.ppm  debug.txt  mirror+gold.ppm  out  out.puta  out.txt  triangle_rendered.ppm
projeto/intermediate_imgs/: progressive_output_0001.ppm  progressive_output_0256.ppm  progressive_output_0512.ppm  progressive_output_0768.ppm
projeto/src/: CMakeLists.txt  main.cpp
projeto/src/3DSortingStruct/: AccelStruct.hpp
projeto/src/Camera/: camera.hpp  perspective.cpp  perspective.hpp
projeto/src/Image/: ImagePPM.cpp  ImagePPM.hpp  image.hpp
projeto/src/Light/: AmbientLight.hpp  AreaLight.hpp  PointLight.hpp  light.hpp
projeto/src/Primitive/: BB.hpp  primitive.hpp
projeto/src/Primitive/BRDF/: BRDF.hpp  Phong.cpp  Phong.hpp
projeto/src/Primitive/Geometry/: geometry.hpp  mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp
projeto/src/Rays/: intersection.hpp  ray.hpp
projeto/src/Renderer/: ProgressiveRenderer.cpp  ProgressiveRenderer.hpp  StandardRenderer.cpp  StandardRenderer.hpp  renderer.hpp
projeto/src/Scene/: scene.cpp  scene.hpp
projeto/src/Scene/tinyobjloader/: loader_example.cc  tiny_obj_loader.h
projeto/src/Scene/tinyobjloader/models/: cornell_box.mtl  cornell_box_VI.mtl  triangle.mtl
projeto/src/Shader/: AmbientShader.cpp  AmbientShader.hpp  DistributedShader.cpp  DistributedShader.hpp  PathTracerShader.cpp  PathTracerShader.hpp  WhittedShader.cpp  WhittedShader.hpp  shader.hpp
projeto/src/Window/: Window.cpp  Window.hpp
projeto/src/utils/: RGB.hpp  customValues.cpp  customValues.hpp  vector.hpp
projeto/toolkits/glfw/: glfw3.lib
